# urp-core

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SPEC-v2.md  SPEC.md  SPEC‑v2.md  knowledge_base.py  ledger.py  pyproject.toml  railway.toml  requirements.txt  server.py
.github/ISSUE_TEMPLATE/: agent-task.md
.github/workflows/: ci.yml
URP/: __init__.py  agent.py
conformance/: README.md  canonical_json_vectors.json  claim_match_vectors.json  receipt_hash_vectors.json  signature_vectors.json
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DECISIONS.md  EU_AI_ACT_ALIGNMENT.md  OPENCLAW_CASE_STUDY.md  POSITIONING.md  getting-started.md
examples/: README.md  claim_match_result.json  compound_claim.json  evidence_bundle.json  false_match_result.json  fibonacci_receipt.json  remote_tool_receipt.json  structured_claim.json  verification_result.json
simulations/: deterministic_demo.py  llm_simulation.py  networked_simulation.py  ollama_demo.py  simple_simulation.py
static/: index.html
tests/: test_a2a_adapter.py  test_cli.py  test_conformance.py  test_core.py  test_llm_agents.py  test_mcp_adapter.py  test_message.py  test_server.py  test_signing.py  test_structured_claim.py  test_verify.py
trp/: __init__.py  a2a_adapter.py  agent.py  canonical.py  claim_verifier.py  cli.py  core.py  deterministic_tools.py  knowledge_base.py  ledger.py  llm.py  llm_agents.py  mcp_adapter.py  message.py  signing.py  structured_claim.py  transport.py  verify.py
urp/: __init__.py  a2a_adapter.py  agent.py  claim_verifier.py  core.py  deterministic_tools.py  knowledge_base.py  llm.py  llm_agents.py  mcp_adapter.py  message.py  signing.py  structured_claim.py  transport.py  verify.py
