[project]
name = "trp-core"
version = "0.6.0"
description = "Signed, replay-verifiable receipts for AI agent tool calls"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "agents", "verification", "receipts", "mcp", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "websockets>=12.0",
    "groq>=0.4.0",
    "jwcrypto>=1.5.6",
    "jcs>=0.2",
]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
demo = ["groq>=0.4.0"]
# OpenAIAdapter uses urllib (stdlib) so the openai package is not required at runtime.
# This extra is provided for users who prefer the official SDK in their own code.
openai = ["openai>=1.0.0"]

[project.scripts]
trp = "trp.cli:main"

[tool.setuptools.packages.find]
include = ["trp*"]

[project.urls]
Homepage = "https://github.com/Spudbe/trp-core"
Documentation = "https://github.com/Spudbe/trp-core/blob/main/SPEC.md"
Repository = "https://github.com/Spudbe/trp-core"
Issues = "https://github.com/Spudbe/trp-core/issues"
